--- a/frontend/app/views/fragments/benefits/featured.scala.html
+++ b/frontend/app/views/fragments/benefits/featured.scala.html
@@ -3,12 +3,10 @@
 @import model.Benefits
 @import model.Benefits.BenefitItem
 
-<div class="benefits-featured">
-    <ul class="benefits-featured__list u-unstyled grid grid--3up">
-    @for(benefit <- Benefits.detailsLimited(tier)) {
-        <li class="benefits__list--items grid__item">
-            @fragments.benefits.item(benefit=benefit, isFeatured=true)
-        </li>
-    }
-    </ul>
-</div>
+<ul class="benefits-featured u-unstyled grid grid--3up-stacked">
+@for(benefit <- Benefits.detailsLimited(tier)) {
+    <li class="benefits-featured__item grid__item">
+        @fragments.benefits.item(benefit=benefit)
+    </li>
+}
+</ul>
