--- a/frontend/assets/stylesheets/components/_action.scss
+++ b/frontend/assets/stylesheets/components/_action.scss
@@ -264,6 +264,12 @@
     display: none;
 }
 
+.action--no-margin {
+    margin: 0;
+}
+.action--no-top-margin {
+    margin-tip: 0;
+}
 .action--no-bottom-margin {
     margin-bottom: 0;
 }
