--- a/frontend/assets/stylesheets/components/_grid.scss
+++ b/frontend/assets/stylesheets/components/_grid.scss
@@ -7,28 +7,24 @@
 
 .grid {
     @include clearfix;
-
-    @include mq(mobileLandscape) {
-        width: 100% + $gutter-width-fluid; // 100% + gutter width from .benefit
-        margin-left: -$gutter-width-fluid; // - gutter width from .benefit
-    }
 }
 .grid__item {
     margin-bottom: rem($gs-gutter);
-
-    @include mq(mobileLandscape) {
-        float: left;
-        margin-left: $gutter-width-fluid;
-        margin-bottom: $gutter-width-fluid;
-    }
 }
 
 /* Grid 2up
    ========================================================================== */
 
 .grid--2up {
+    @include mq(mobileLandscape) {
+        width: 100% + $gutter-width-fluid; // 100% + gutter width from .benefit
+        margin-left: -$gutter-width-fluid; // - gutter width from .benefit
+    }
     .grid__item {
         @include mq(mobileLandscape) {
+            float: left;
+            margin-left: $gutter-width-fluid;
+            margin-bottom: $gutter-width-fluid;
             width: 50% - $gutter-width-fluid;
             &:nth-of-type(2n+1) { clear: left; }
         }
@@ -39,8 +35,15 @@
    ========================================================================== */
 
 .grid--3up {
+    @include mq(mobileLandscape) {
+        width: 100% + $gutter-width-fluid; // 100% + gutter width from .benefit
+        margin-left: -$gutter-width-fluid; // - gutter width from .benefit
+    }
     .grid__item {
         @include mq(mobileLandscape) {
+            float: left;
+            margin-left: $gutter-width-fluid;
+            margin-bottom: $gutter-width-fluid;
             width: 50% - $gutter-width-fluid;
             &:nth-of-type(2n+1) { clear: left; }
         }
@@ -52,12 +55,34 @@
     }
 }
 
+/* Grid 3up stacked (3 > 1)
+   ========================================================================== */
+
+.grid--3up-stacked {
+    @include mq(desktop) {
+        width: 100% + $gutter-width-fluid; // 100% + gutter width from .benefit
+        margin-left: -$gutter-width-fluid; // - gutter width from .benefit
+    }
+    .grid__item {
+        @include mq(desktop) {
+            float: left;
+            margin-left: $gutter-width-fluid;
+            margin-bottom: $gutter-width-fluid;
+            width: 33.3% - $gutter-width-fluid;
+            &:nth-of-type(3n+1) { clear: left; }
+        }
+    }
+}
+
 /* Grid 4up (4 > 2 > 1)
    ========================================================================== */
 
 .grid--4up {
     .grid__item {
         @include mq(mobileLandscape) {
+            float: left;
+            margin-left: $gutter-width-fluid;
+            margin-bottom: $gutter-width-fluid;
             width: 50% - $gutter-width-fluid;
             &:nth-of-type(2n+1) { clear: left; }
         }
