--- a/frontend/assets/stylesheets/pages/_events-detail.scss
+++ b/frontend/assets/stylesheets/pages/_events-detail.scss
@@ -480,6 +480,7 @@
     .event-content__second {
         float: left;
         width: rem(220px);
+        position: relative;
 
         .join-choose-tier & {
             width: auto;
@@ -507,4 +508,12 @@
 .event-content--line-divider {
     border-top: rem(1px) dotted $c-neutral3;
     padding: rem(5px) 0;
+}
+
+.sales-dates__toggle {
+    padding: rem($gs-baseline/2) rem($gs-baseline);
+    margin-top: -#{rem($gs-baseline/2)};
+    margin-right: -#{rem($gs-baseline)};
+    right: 0;
+    position: absolute;
 }
