--- a/frontend/assets/stylesheets/components/_action.scss
+++ b/frontend/assets/stylesheets/components/_action.scss
@@ -268,7 +268,7 @@
     margin: 0;
 }
 .action--no-top-margin {
-    margin-tip: 0;
+    margin-top: 0;
 }
 .action--no-bottom-margin {
     margin-bottom: 0;
