--- a/frontend/assets/stylesheets/pages/_events-list.scss
+++ b/frontend/assets/stylesheets/pages/_events-list.scss
@@ -83,6 +83,14 @@
     }
 }
 
+@include mq($to: tablet) {
+    .events-list__category__label {
+        display: inline-block;
+        width: rem(100px);
+
+    }
+}
+
 .events-list__category__select {
     border: 0;
     outline: 0;
@@ -103,6 +111,9 @@
 
 .events-list__filter {
     position: relative;
+    display: block;
+    overflow: hidden;
+    clear: right;
 
     @include mq(tablet) {
         float: right;
