--- a/frontend/app/views/event/list.scala.html
+++ b/frontend/app/views/event/list.scala.html
@@ -9,14 +9,15 @@
         <div class="event-block">
             <h4 class="event-block__header event-block__header__title case--lower">Featured</h4>
             <div class="event-block__events">
-                <ul class="u-unstyled">
                 @for(heroEvent <- eventPortfolio.heroOpt) {
                     @fragments.event.item(heroEvent, true)
                 }
                 </ul>
-                <ul class="events-list events-list--items-3 events-list__hero-descendant u-unstyled">
+                <ul class="events-list grid grid--3up u-unstyled">
                     @for(event <- eventPortfolio.priority) {
-                        @fragments.event.item(event)
+                        <li class="grid__item">
+                            @fragments.event.item(event)
+                        </li>
                     }
                 </ul>
             </div>
@@ -28,9 +29,11 @@
             <h4 class="event-block__header__title case--lower">What's on</h4>
         </div>
         <div class="event-block__events">
-            <ul class="events-list events-list--items-3 u-unstyled@if(eventPortfolio.normal.length == 0){ events-list--empty}" id="js-filter-container">
+            <ul class="grid grid--3up u-unstyled@if(eventPortfolio.normal.length == 0){ events-list--empty}" id="js-filter-container">
                 @for(event <- eventPortfolio.normal) {
-                    @fragments.event.item(event, false)
+                    <li class="grid__item">
+                        @fragments.event.item(event, false)
+                    </li>
                 }
             </ul>
         </div>
@@ -42,21 +45,21 @@
                 <h4 class="event-block__header__title case--lower">Past events</h4>
             </div>
             <div class="event-block__events">
-                <ul class="events-list hygrid hygrid--4 u-unstyled">
+                <ul class="events-list grid grid--4up u-unstyled">
                     @for(event <- eventPortfolio.pastEvents.get.slice(0, 4)) {
-                        @fragments.event.item(event, false, isMinimal=true)
+                        <li class="grid__item">
+                            @fragments.event.item(event, false, isMinimal=true)
+                        </li>
                     }
                 </ul>
-
-
-                <ul class="events-list hygrid hygrid--wrapped hygrid--2 u-unstyled" id="js-toggle-past-events" data-toggle-hidden>
+                <ul class="events-list grid grid--2up u-unstyled" id="js-toggle-past-events" data-toggle-hidden>
                     @for(event <- eventPortfolio.pastEvents.get.slice(4, 26)) {
-                        @fragments.event.item(event, false, isMinimal=true, isCard=true)
+                        <li class="grid__item">
+                            @fragments.event.item(event, false, isMinimal=true, isCard=true)
+                        </li>
                     }
                 </ul>
-
-                <button class="js-toggle action action--toggle" data-toggle="js-toggle-past-events" data-toggle-label="Less">More past events</button>
-
+                <button class="js-toggle action action--no-top-margin action--toggle" data-toggle="js-toggle-past-events" data-toggle-label="Less">More past events</button>
             </div>
         </div>
     }
