--- a/frontend/app/views/event/masterclass.scala.html
+++ b/frontend/app/views/event/masterclass.scala.html
@@ -14,7 +14,7 @@
         "masterclasses"
     )
 
-    <div class="event-block tone-masterclasses--border">
+    <div class="event-block event-block--padded tone-masterclasses--border">
         <div class="event-block__events event-block__events--no-header">
             <label class="events-list__category">
                 <span class="events-list__category__label">Show:</span>
