--- a/frontend/app/views/event/masterclass.scala.html
+++ b/frontend/app/views/event/masterclass.scala.html
@@ -19,9 +19,9 @@
             <label class="events-list__category">
                 <span class="events-list__category__label">Show:</span>
                 <select class="events-list__category__select js-filter-category">
-                    <option value="all">All categories</option>
+                    <option value="">All categories</option>
                     @for(category <- MasterclassEvent.tags) {
-                        <option value="@MasterclassEvent.encodeTag(category.categoryName)" @if(category.categoryName == selectedTag){ selected}>@category.categoryName</option>
+                        <option value="/@MasterclassEvent.encodeTag(category.categoryName)" @if(category.categoryName == selectedTag){ selected}>@category.categoryName</option>
                     }
                 </select>
             </label>
@@ -31,9 +31,9 @@
                     <label class="events-list__category">
                         <span class="events-list__category__label">Subcategory:</span>
                         <select class="events-list__category__select js-filter-category">
-                            <option value="@MasterclassEvent.encodeTag(category.categoryName)">All</option>
+                            <option value="/@MasterclassEvent.encodeTag(category.categoryName)">All</option>
                             @for(subCategory <- category.subCategories) {
-                                <option value="@MasterclassEvent.encodeTag(category.categoryName)/@MasterclassEvent.encodeTag(subCategory)" @if(subCategory == selectedSubTag){ selected}>@subCategory</option>
+                                <option value="/@MasterclassEvent.encodeTag(category.categoryName)/@MasterclassEvent.encodeTag(subCategory)" @if(subCategory == selectedSubTag){ selected}>@subCategory</option>
                             }
                         </select>
                     </label>
