Add tone colours to event-block

--- a/frontend/assets/stylesheets/base/_tones.scss
+++ b/frontend/assets/stylesheets/base/_tones.scss
@@ -32,6 +32,13 @@
     background-color: $mem-live-accent;
 }
 
+.tone-masterclasses--border {
+    border-color: $mem-mc-top;
+}
+.tone-guardian-live--border {
+    border-color: $mem-live-top;
+}
+
 .tone-masterclasses--trans {
     background-color: transparentize($mem-mc-top, .1);
 }
