--- a/frontend/app/views/event/masterclass.scala.html
+++ b/frontend/app/views/event/masterclass.scala.html
@@ -7,14 +7,14 @@
 
 @import model.Eventbrite.MasterclassEvent
 
-@main("Masterclasses", containerPadding=false, htmlClass="events-bg theme--masterclass", pageInfo=pageInfo) {
+@main("Masterclasses", containerPadding=false, htmlClass="events-bg theme--masterclasses", pageInfo=pageInfo) {
 
     @fragments.event.headerBar(
         "Courses and workshops taught by award-winning professionals, with discounts for Partners and Patrons",
         "masterclasses"
     )
 
-    <div class="event-block">
+    <div class="event-block tone-masterclasses--border">
         <div class="event-block__events event-block__events--no-header">
             <label class="events-list__category">
                 <span class="events-list__category__label">Show:</span>
