Fix for broken spacing on tier change / cancellation pages

--- a/frontend/app/views/tier/cancel/confirm.scala.html
+++ b/frontend/app/views/tier/cancel/confirm.scala.html
@@ -10,10 +10,8 @@
 
         @fragments.layout.sectionHeader("We don't like goodbyes&hellip;")
 
-        <p>
-            &hellip;so instead we're going to try and tempt you to stay by reminding you of all the good things
-            you get from Guardian Membership
-        </p>
+        <p>&hellip;so instead we're going to try and tempt you to stay by reminding you of all the good things
+            you get from Guardian Membership</p>
 
         <div class="package-container">
             <div class="package-list package-list--flex-box">
