--- a/frontend/assets/stylesheets/nav/_control.scss
+++ b/frontend/assets/stylesheets/nav/_control.scss
@@ -24,6 +24,8 @@
     @extend %icon-holder-circle;
     font-family: $f-serif-text;
     font-size: rem(13px);
+    cursor: pointer;
+    outline: none;
 }
 
 .control--faq {
@@ -45,6 +47,26 @@
     border-color: $white;
     .control__info {
         color: $white;
+    }
+}
+
+.control--cancel {
+    border: 1px solid $c-neutral3;
+
+    .icon-cross {
+        opacity: .2;
+    }
+
+    .control__icon {
+        padding-top: rem(4px);
+    }
+
+    &:hover {
+        border: 1px solid $c-neutral1;
+
+        .icon-cross {
+            opacity: 1;
+        }
     }
 }
 
