--- a/frontend/assets/stylesheets/style.scss
+++ b/frontend/assets/stylesheets/style.scss
@@ -83,6 +83,7 @@
 @import 'components/signpost';
 @import 'components/flash-message';
 @import 'components/help';
+@import 'components/modal';
 
 /* ==========================================================================
    Membership pages
