swapped out $to to $until to stop sass warnings

--- a/frontend/assets/stylesheets/pages/_events-list.scss
+++ b/frontend/assets/stylesheets/pages/_events-list.scss
@@ -83,7 +83,7 @@
     }
 }
 
-@include mq($to: tablet) {
+@include mq($until: tablet) {
     .events-list__category__label {
         display: inline-block;
         width: rem(100px);
