--- a/frontend/app/views/fragments/tier/feature.scala.html
+++ b/frontend/app/views/fragments/tier/feature.scala.html
@@ -8,15 +8,7 @@
 
 <div class="package-feature">
     <div class="package-feature__header">
-        <div class="tier-header tier-header--@tier.toString.toLowerCase">
-            <h3 class="tier-header__title">
-                <i class="icon icon-g-white-28"></i>
-                @tier
-            </h3>
-            <div class="tier-header__pricing">
-                @fragments.benefits.priceInfo(tier = tier, isReversed = tier != Tier.Partner)
-            </div>
-        </div>
+        @fragments.tier.tierHeader(tier)
     </div>
     @if(caption){
         <div class="package-feature__caption">
