Dedupe tier header styles

--- a/frontend/assets/stylesheets/pages/_tier.scss
+++ b/frontend/assets/stylesheets/pages/_tier.scss
@@ -315,12 +315,19 @@ $current-indicator: rem(72px);
 }
 
 /**
- * Tier header stacked
+ * Tier header stacked modifier
  */
 .tier-header--stacked {
 
+    $stack-height: 144px;
+
+    min-height: rem($stack-height);
+
+    @include mq(mobile) {
+        min-height: 0;
+    }
     @include mq(desktop) {
-        min-height: rem(gs-span(2));
+        min-height: rem($stack-height);
     }
 
     .tier-header__title {
@@ -331,75 +338,10 @@ $current-indicator: rem(72px);
         }
     }
     .tier-header__pricing {
-        padding-top: rem($gs-gutter + 10);
+        padding-top: rem($gs-gutter + 20);
     }
 }
 
-
-/* ==========================================================================
-   Tier Header - Old
-   ========================================================================== */
-// TODO: Refactor to use shared tier-header styles
-
-//TODO: Replace with tier-header
-.package__title-container {
-
-    overflow: auto;
-    position: relative;
-    padding: rem($gs-gutter/2);
-
-    @include mq(tablet) {
-        padding: rem($gs-gutter - 5) rem($gs-gutter);
-    }
-
-    @include mq(desktop) {
-        min-height: rem(gs-span(2));
-    }
-
-    .package__title {
-        display: block;
-        float: left;
-        @include fs-headline(5);
-        color: $white;
-        word-wrap: break-word;
-        position: relative;
-        @include mq(desktop) {
-            float: none;
-        }
-    }
-    .package__title .icon {
-        vertical-align: middle;
-        position: relative;
-        top: -2px;
-    }
-    .package__pricing {
-        float: right;
-        width: 100%;
-        max-width: rem(gs-span(4) - $gs-gutter * 2);
-
-        @include mq(mobileLandscape) {
-            max-width: rem(gs-span(4) - $gs-gutter);
-        }
-    }
-    .price-info {
-        padding-top: rem($gs-gutter + 10);
-        color: $white;
-    }
-
-}
-.package__title-container--friend {
-    background-color: $c-neutral1;
-}
-.package__title-container--partner {
-    background-color: $mem-brandLightblue;
-    .package__title,
-    .price-info {
-        color: $black;
-    }
-}
-.package__title-container--patron {
-    background-color: $mem-brandDarkBlue;
-}
 
 /* ==========================================================================
    Tier - Package Feauture
