removed use of icon-cross class for styles

--- a/frontend/assets/stylesheets/nav/_control.scss
+++ b/frontend/assets/stylesheets/nav/_control.scss
@@ -53,18 +53,15 @@
 .control--cancel {
     border: 1px solid $c-neutral3;
 
-    .icon-cross {
-        opacity: .2;
-    }
-
     .control__icon {
         padding-top: rem(4px);
+        opacity: .2;
     }
 
     &:hover {
         border: 1px solid $c-neutral1;
 
-        .icon-cross {
+        .control__icon {
             opacity: 1;
         }
     }
