--- a/frontend/app/views/fragments/tier/tierHeader.scala.html
+++ b/frontend/app/views/fragments/tier/tierHeader.scala.html
@@ -1,13 +1,11 @@
 @(tier: com.gu.membership.salesforce.Tier.Tier)
 
-@import com.gu.membership.salesforce.Tier
-
 <div class="tier-header tier-header--@tier.toString.toLowerCase">
     <h3 class="tier-header__title">
         <i class="icon icon-g-white-28"></i>
         @tier
     </h3>
     <div class="tier-header__pricing">
-        @fragments.benefits.priceInfo(tier = tier, isReversed = tier != Tier.Partner)
+        @fragments.benefits.priceInfo(tier=tier, isReversable=true)
     </div>
 </div>
